--- a/services/backend/package.json
+++ b/services/backend/package.json
@@ -19,6 +19,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "express": "^4.21.1"
+    "express": "^4.21.1",
+    "json-server": "^0.17.4"
   }
 }
